[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://Slingshot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bird.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://Column.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/pig.png" type="Texture" id=6]
[ext_resource path="res://Trajectory.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 10 )

[sub_resource type="CircleShape2D" id=2]
radius = 22.0

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
margin_left = 1168.0
margin_top = 24.0
margin_right = 1256.0
margin_bottom = 56.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Background" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 1 )
centered = false

[node name="Slingshot" parent="." instance=ExtResource( 2 )]
position = Vector2( 236, 478 )

[node name="Bird" parent="." instance=ExtResource( 3 )]
position = Vector2( 163, 473 )
gravity_scale = 10.0
contacts_reported = 1
contact_monitor = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Bird"]
position = Vector2( 0, -4 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 640, 673 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="Columns" type="Node2D" parent="."]

[node name="Column" parent="Columns" instance=ExtResource( 5 )]
position = Vector2( 960, 630 )

[node name="Column2" parent="Columns" instance=ExtResource( 5 )]
position = Vector2( 960, 549 )

[node name="Column3" parent="Columns" instance=ExtResource( 5 )]
position = Vector2( 960, 447 )

[node name="Column7" parent="Columns" instance=ExtResource( 5 )]
position = Vector2( 998, 396 )
rotation = 1.5708

[node name="Column8" parent="Columns" instance=ExtResource( 5 )]
position = Vector2( 1000, 496 )
rotation = 1.5708

[node name="Column4" parent="Columns" instance=ExtResource( 5 )]
position = Vector2( 1040, 630 )

[node name="Column5" parent="Columns" instance=ExtResource( 5 )]
position = Vector2( 1040, 549 )

[node name="Column6" parent="Columns" instance=ExtResource( 5 )]
position = Vector2( 1040, 447 )

[node name="Column9" parent="Columns" instance=ExtResource( 5 )]
position = Vector2( 224, 624 )
mode = 1

[node name="Pig" type="RigidBody2D" parent="."]
position = Vector2( 1000, 464 )
contacts_reported = 1
contact_monitor = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Pig"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pig"]
shape = SubResource( 2 )

[node name="Trajectory" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 528, 232 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Bird" to="." method="_on_Bird_body_entered"]
[connection signal="drag_started" from="Bird" to="." method="_on_Bird_drag_started"]
[connection signal="released" from="Bird" to="." method="_on_Bird_released"]
[connection signal="sleeping_state_changed" from="Bird" to="." method="_on_Bird_sleeping_state_changed"]
[connection signal="screen_exited" from="Bird/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Pig" to="." method="_on_Pig_body_entered"]
